# web-order-assistant

./: .gitignore  231220.ipynb  README.md  pyproject.toml
mysite/: asgi.py  settings.py  urls.py  views.py
mysite/templates/: base.html  home.html
mysite/templates/registration/: login.html  password_change_form.html  register.html  register_done.html
order/: admin.py  chains.py  chains_legacy.py  consumers.py  models.py  order_manager.py  order_manager_legacy.py  routing.py
order/migrations/: 0001_initial.py  0002_remove_order_price_remove_order_product_and_more.py  0003_alter_order_order_date.py  0004_alter_chatmessage_options_alter_orderstatus_options_and_more.py
order/templates/order/: index.html  index_legacy.html
